# wolfram-sigma-backend

./: .flake8  .gitignore  .pre-commit-config.yaml  Makefile  alembic.ini  config.py  docker-compose-wolfram-backend.yaml  main.py  pyproject.toml
migration/: env.py
migration/versions/: 1a45a77851fe_equations_creation.py  3dd396a64a6f_init_equntions_and_users.py  b4e515732bd3_init_users.py
migrations/: env.py
migrations/versions/: 194ec9ee76b9_init_users.py
wolfram_sigma_backend/app/auth/: auth.py  database.py  manager.py  models.py  schemas.py  utils.py
wolfram_sigma_backend/app/database/: database.py
wolfram_sigma_backend/app/domain/: equation.py  integral.py  main_page.py  matrix.py  user_account.py
wolfram_sigma_backend/app/infrastructure/: send_verification_email.py
wolfram_sigma_backend/app/infrastructure/math/: integral_processor.py  load_lib.py  matrix_processor.py
wolfram_sigma_backend/app/mainpage/: mainpage.py  router.py  schemas.py
wolfram_sigma_backend/app/models/: auth_models.py  main_page_models.py  models.py
wolfram_sigma_backend/app/persistence/: database_config.py
wolfram_sigma_backend/app/persistence/repository/: equation.py  sql_alchemy_repository.py  user.py
wolfram_sigma_backend/app/persistence/service/: equation.py  user.py
wolfram_sigma_backend/app/persistence/unit_of_work/: interface_uow.py  uow.py
wolfram_sigma_backend/app/web_api/: chat.py  dependencies.py  main_page.py  routers.py  test_protected_route.py  user_account.py  verify_email.py
wolfram_sigma_backend/app/web_api/equations/: integral.py  matrix.py  (+1 more)
