[tool.poetry]
name = "wolfram-sigma-backend"
version = "0.1.0"
description = ""
authors = ["Danila Kryvanos <danila.krn@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["uvicorn"], version = "^0.110.0"}
psycopg = "^3.1.18"
psycopg2 = "^2.9.9"
asyncpg = "^0.29.0"
uvicorn = {extras = ["standart"], version = "^0.29.0"}
makefile = "^1.1.0"
fastapi-users = {extras = ["sqlalchemy"], version = "^12.1.3"}
python-dotenv = "^1.0.1"
alembic = "^1.13.1"
black = "^24.2.0"
flake8 = "^7.0.0"
pre-commit = "^3.7.0"
numpy = "^1.26.4"
sympy = "^1.12"
websocket = "^0.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
